<resources>
    <string name="app_name">Kingdom Quiz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_scoreboard">Scoreboard</string>
    <string name="menu_profile">Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="dark_light_mode">Dark/Light Mode</string>
    <string name="difficulty">Difficulty</string>
    <string name="category">Category</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="name">Name</string>
    <string name="change">(Change)</string>
    <string name="new_value">New value</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="start_game">Start Game</string>
    <string name="done">Done</string>
    <string name="score_placeholder">Take the quiz to see your score!</string>
    <string name="close">Close</string>
</resources>